[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Menus/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/States/main_menu_state.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/scroll_menu.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/confirm_menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/cancel_menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/Menus/menu_bg_magenta.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "pressed"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 6 ) ]
}

[node name="MainMenuState" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="ScrollStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="ConfirmStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="CancelStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/pressed = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
